resource/manifests/hello-rest-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-rest-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: k8s.nuup.ninja
      http:
        paths:
          - path: /hello-rest
            pathType: Prefix
            backend:
              service:
                name: hello-rest-service
                port:
                  number: 80
